--- a/app/src/main/res/layout/view_diet_detail_item.xml
+++ b/app/src/main/res/layout/view_diet_detail_item.xml
@@ -32,9 +32,11 @@
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:padding="4dp"
             android:scaleType="centerCrop"
             android:src="@{image}"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="h,1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="@id/diet_detail_guideline"
@@ -68,7 +70,9 @@
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/chipGroup"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:chipSpacingHorizontal="4dp"
+                app:chipSpacingVertical="-8dp">
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip_calory"
@@ -78,7 +82,7 @@
                     android:checkable="false"
                     android:clickable="false"
                     android:focusable="false"
-                    android:padding="10dp"
+                    android:textSize="11sp"
                     app:checkedIconEnabled="false"
                     app:checkedIconVisible="false"
                     app:chipBackgroundColor="@color/secondary"
