--- a/app/src/main/res/layout/fragment_exercise_choose.xml
+++ b/app/src/main/res/layout/fragment_exercise_choose.xml
@@ -26,7 +26,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/exercise_run"
+            android:id="@+id/exercise_now_is"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="72dp"
@@ -109,10 +109,9 @@
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/exercise_chose"
-                app:layout_constraintTop_toTopOf="parent" /> <!-- 새 기능의 제목 -->
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-            <!-- 추가하고 싶은 뷰들이 여기에 위치 -->
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
