--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,6 +9,7 @@
     <include app:graph="@navigation/dept"/>
     <include app:graph="@navigation/home"/>
     <include app:graph="@navigation/dosage"/>
+    <include app:graph="@navigation/activity"/>
     <activity
         android:id="@+id/drawer_login"
         android:name="com.dearmyhealth.modules.login.ui.LoginActivity"
