--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -58,6 +58,7 @@
                     android:layout_marginEnd="22dp"
                     android:layout_marginBottom="32dp"
                     android:background="@drawable/shape_radius_square_stroke"
+                    android:backgroundTint="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
