--- a/app/src/main/res/layout/view_exercise_type.xml
+++ b/app/src/main/res/layout/view_exercise_type.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/shape_radius_square_stroke">
 
     <ImageView
-        android:id="@+id/exercise_status_IV"
+        android:id="@+id/exercise_icon_IV"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/exercise_now_is"
+        android:id="@+id/exercise_name_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/exercise_walk"
