--- a/app/src/main/res/navigation/activity.xml
+++ b/app/src/main/res/navigation/activity.xml
@@ -8,13 +8,13 @@
 
     <fragment
         android:id="@+id/exerciseScreen"
-        android:name="com.dearmyhealth.modules.exercise.ExerciseFragment"
+        android:name="com.dearmyhealth.modules.exercise.fragment.ExerciseFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_exercise"/>
 
     <fragment
         android:id="@+id/exerciseSettingScreen"
-        android:name="com.dearmyhealth.modules.exercise.ExerciseChooseFragment"
+        android:name="com.dearmyhealth.modules.exercise.fragment.ExerciseChooseFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_exercise_choose"/>
 
