--- a/app/src/main/res/layout/fragment_exercise_choose.xml
+++ b/app/src/main/res/layout/fragment_exercise_choose.xml
@@ -14,14 +14,27 @@
             android:id="@+id/exercise_now"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
             android:layout_marginTop="16dp"
             android:text="@string/exercise_now"
             android:textColor="@color/green_1"
             android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.087"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/exercise_finish_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/shape_radius_square_stroke_r5dp"
+            android:backgroundTint="@color/grape"
+            android:gravity="center"
+            android:paddingHorizontal="8dp"
+            android:text="@string/exercise_finish"
+            android:textColor="@color/on_primary_surface"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/exercise_now" />
 
         <ImageView
             android:id="@+id/exercise_status_IV"
