--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,4 +42,5 @@
     <color name="red">#FFFE0707</color>
     <color name="gray_orange">#FFDAD7CD</color>
     <color name="gray_orange_1">#FF6B6565</color>
+    <color name="grape">#BE5189</color>
 </resources>
