--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="yellowgray">#DAD7CD</color>
     <color name="lightgray">#D9D9D9</color>
     <color name="lightgreen">#A3B18A</color>
+    <color name="heavygray">#6B6565</color>
     <color name="green">#588157</color>
 
     <color name="green_1">#FF3A5A40</color>
